Primer tutorial de TF actualizamos intro

--- a/tutorial_1.ipynb
+++ b/tutorial_1.ipynb
@@ -7,20 +7,51 @@
     "editable": true
    },
    "source": [
-    "Dentro del estpíritu que tiene APSL relacionado a la creación de conocimiento \n",
+    "## Tensor flow para principiantes (I)\n",
     "\n",
     "\n",
-    "# Introducción\n",
+    "### Resumen\n",
     "\n",
-    "Este tutorial muestra el flujo de trabajo básico de usar TensorFlow con un modelo lineal simple. \n",
+    "    Con éste artículo se abre una serie de tutoriales sobre el uso de la librería de TensorFlow para el reconocimiento de imágenes.  En esta primera entrega, analizaremos los conceptos básicos de la librería y su implementación en un modelo simple para el reconocimiento de dígitos escritos a mano.\n",
     "\n",
-    "Después de cargar el conjunto de datos MNIST, que son imágenes de dígitos escritos a mano, definimos y optimizamos un modelo matemático simple en TensorFlow.\n",
     "\n",
-    "Algunas onociones básicas de álgebra lineal, Python y el editor Jupyter Notebook. También ayuda si tiene una comprensión básica de Machine Learning y clasificación.\n",
     "\n",
-    "https://www.youtube.com/watch?v=wuo4JdG3SvU&list=PL9Hr9sNUjfsmEu1ZniY0XpHSzl5uihcXZ\n",
+    "## Introducción\n",
     "\n",
-    "https://github.com/Hvass-Labs/TensorFlow-Tutorials/blob/master/01_Simple_Linear_Model.ipynb\n"
+    "Dentro del compromiso que tiene APSL relacionado con la generación  y divulgación de conocimiento,   el equipo del departamento de  Ciencias de Datos y Machine Learning  quiere ofrecer  una serie de tutoriales sobre el uso de TensorFlow para el reconocimientos de imágenes.\n",
+    "\n",
+    "El objetivo de éstos tutoriales,  que se irán publicando periódicamente,  es el de ofrecer de  manera sencilla y didáctica,  a través de ejemplos prácticos, los fundamentos y conceptos básicos esenciales para la tarea de reconocimiento de imágenes.  Al acabar la serie habremos desarrollado una aplicación que permita crear una red neuronal en TensorFlow, entrenable y capaz de reconocer nuestra propia base de datos de imágenes.  \n",
+    "\n",
+    "Para lograrlo empezaremos nuestro camino con ejemplos muy simples donde se irán introduciendo los aspectos básicos de TensorFlow, y  que iremos avanzando en nuestros conocimientos hasta alcanzar el objetivo propuesto.\n",
+    "\n",
+    "El contenido de estos turoriales están elaborados con la recopilación de distintas fuentes (manuales y blogs), así como con conocimiento adquirido de nuestra experiencia en el desarrollo de  aplicaciones propias para distintas tareas en diferentes áreas. En la bibliografía haremos referencia a las diversas fuentes utilizadas.\n",
+    "\n",
+    "\n",
+    "Comencemos entonces !!!\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### ¿ Qué es TensorFlow ?\n",
+    "\n",
+    "TensorFlow es una librería de código abierto para cálculo numérico, usando como forma de programación grafos de  flujo de datos.  Los nodos en el grafo representan operaciones matemáticas, mientras que las conexiones o links del grafo representan los conjuntos de datos multidimensionales (tensores) .\n",
+    "\n",
+    "Con esta librería somos capaces, entre otras operaciones, de construir y entrenar redes neuronales para detectar correlaciones y descifrar patrones, análogos al aprendizaje y razonamiento usados por los humanos.​  Actualmente se utiliza Tensorflow tanto en la investigación como para la producción de productos de Google,  remplazando el rol de su predecesor de código cerrado, [DistBelief]. \n",
+    "\n",
+    "TensorFlow es el sistema de aprendizaje automático de segunda generación de Google Brain, liberado como software de código abierto el 9 de noviembre del 2015. Mientras la implementación de referencia se ejecuta en dispositivos aislados, TensorFlow puede correr en múltiple CPUs y GPUs (con extensiones opcionales de CUDA para informática de propósito general en unidades de procesamiento gráfico). TensorFlow está disponible en Linux de 64 bits, macOS, y plataformas móviles que incluyen Android e iOS.\n",
+    "\n",
+    "Los cómputos de TensorFlow están expresados como [stateful dataflow graphs]. El nombre TensorFlow deriva de las operaciones que las redes neuronales realizan sobre arrays multidimensionales de datos. Estos arrays multidimensionales son referidos como \"tensores\" (más detalles ver [https://www.tensorflow.org/]). \n",
+    "\n",
+    "#### Reconocimiento de dígitos escrito a  mano\n",
+    "\n",
+    "En  éste primer tutorial  mostraremos el flujo de trabajo básico al usar TensorFlow con un modelo lineal simple. El ejemplo que seguiremos para ello es desarrollar una aplicación que reconozca los dígitos escrito a mano. \n",
+    "\n",
+    "Comenzaremos por implementar el modelo más sencillo posible. En este caso, haremos una regresión lineal como primer modelo para el reconocimiento de los dígitos tratados como imágenes.\n",
+    "\n",
+    "Primero procederemos a cargar un conjunto de imágenes  de los dígitos escrito a mano del conjunto de datos [MNIST],  luego procederemos a definir y optimizar un modelo matemático de regresión lineal en TensorFlow.\n",
+    "\n",
+    "*Nota:* Algunas nociones básicas sobre Python  y alguna comprensión básica sobre Machine Learning ayudan a una mejor comprensión.\n",
+    "\n",
+    "Primero cargaremos algunas librería"
    ]
   },
   {
@@ -61,9 +92,9 @@
    },
    "source": [
     "\n",
-    "# Load Data\n",
+    "## Descargamos los Datos (Load Data)\n",
     "\n",
-    "El conjunto de datos MNIST es de aproximadamente 12 MB y se descargará automáticamente si no se encuentra en la ruta dada."
+    "El conjunto de datos MNIST es de aproximadamente 12 MB y se descargará automáticamente si no se encuentra en la ruta dada.\n"
    ]
   },
   {
@@ -90,6 +121,13 @@
     "# Load Data.....\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "data = input_data.read_data_sets(\"data/MNIST/\", one_hot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Verificamos los datos** "
    ]
   },
   {
@@ -126,9 +164,14 @@
     "editable": true
    },
    "source": [
-    "# One-Hot Encoding\n",
+    "Como se observa, ahora tenemos tres sub conjunto de datos, uno de entrenamiento, uno de test y otro de validación. \n",
     "\n",
-    "El conjunto de datos se ha cargado como la denominada codificación One-Hot. Esto significa que las etiquetas se han convertido de un solo número a un vector cuya longitud es igual a la cantidad de clases posibles. Todos los elementos del vector son cero excepto por el elemento $ i $ 'th que es uno y significa que la clase es $ i $. Por ejemplo, las etiquetas codificadas de One-Hot para las primeras 5 imágenes en el conjunto de prueba son:"
+    "\n",
+    "## One-Hot Encoding\n",
+    "\n",
+    "El conjunto de datos se ha cargado con la codificación denominada  One-Hot.  Esto significa que las etiquetas se han convertido de un solo número a un vector cuya longitud es igual a la cantidad de clases posibles. Todos los elementos del vector son cero excepto  el elemento i ésimo que toma el valor uno;  y significa que la clase es i. \n",
+    "\n",
+    "**Por ejemplo**, las etiquetas codificadas de One-Hot para las primeras 5 imágenes en el conjunto de prueba son:"
    ]
   },
   {
@@ -166,7 +209,12 @@
     "editable": true
    },
    "source": [
-    "También necesitamos las clases como números únicos para varias comparaciones y medidas de rendimiento, por lo que convertimos los vectores codificados One-Hot a un solo número tomando el índice del elemento más alto. Tenga en cuenta que la palabra 'clase' es una palabra clave utilizada en Python, por lo que necesitamos usar el nombre 'cls' en su lugar."
+    "Como se observa, tenemos cinco vectores donde cada componete tiene valores cero excepto en la posición de la componete que identifica la clase, cuyo valor es 1. \n",
+    "\n",
+    "Como necesitamos las clases como números únicos para las comparaciones y medidas de rendimiento,  procedemos a convertir estos vectores codificados como One-Hot a un solo número tomando el índice del elemento más alto. Tenga en cuenta que la palabra **'clase'** es una palabra clave utilizada en Python, por lo que necesitamos usar el nombre **'cls'** en su lugar.\n",
+    "\n",
+    "\n",
+    "Para codificar estos vectores a números:"
    ]
   },
   {
@@ -189,7 +237,7 @@
     "editable": true
    },
    "source": [
-    "Ahora podemos ver la clase para las primeras cinco imágenes en el conjunto de pruebas. Compare estos con los vectores codificados One-Hot de arriba. Por ejemplo, la clase para la primera imagen es 7, que corresponde a un vector codificado One-Hot donde todos los elementos son cero excepto por el elemento con índice 7."
+    "Ahora podemos ver la clase para las primeras cinco imágenes en el conjunto de pruebas.  "
    ]
   },
   {
@@ -223,9 +271,12 @@
     "editable": true
    },
    "source": [
-    "# Dimensiones de datos\n",
+    "Comparemos estos con los vectores codificados One-Hot de arriba. Por ejemplo, la clase para la primera imagen es 7, que corresponde a un vector codificado One-Hot donde todos los elementos son cero excepto  el elemento con índice 7.\n",
     "\n",
-    "Las dimensiones de los datos se usan en varios lugares en el código fuente a continuación. Generalmente es mejor usar variables y constantes en lugar de tener que codificar en números específicos cada vez que se usa ese número. Esto significa que los números solo deben cambiarse en un solo lugar. Idealmente, estos se deducirían de los datos que se han leído, pero aquí solo escribimos los números."
+    "El siguiente paso es definir algunas variables que se usaran en el código.\n",
+    "Estas variables y sus valores constantes nos permitirá tener un código más limpio y fácil de leer.\n",
+    "\n",
+    "Las definimos de la siguiente manera: "
    ]
   },
   {
@@ -258,9 +309,8 @@
     "editable": true
    },
    "source": [
-    "# Helper-function para trazar imágenes\n",
     "\n",
-    "Función utilizada para trazar 9 imágenes en una cuadrícula de 3x3 y escribir las clases verdaderas y predichas debajo de cada imagen."
+    "Ahora crearemos una función que es utilizada para trazar 9 imágenes en una cuadrícula de 3x3 y escribir las clases verdaderas y predichas debajo de cada imagen."
    ]
   },
   {
@@ -304,7 +354,7 @@
     "editable": true
    },
    "source": [
-    "# Grafiquemos algunas imágenes para ver si los datos son correctos"
+    "Dibujemos algunas imágenes para ver si los datos son correctos"
    ]
   },
   {
@@ -1377,7 +1427,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
