Primer tutorial de TF actulización intro

--- a/tutorial_1.ipynb
+++ b/tutorial_1.ipynb
@@ -1385,95 +1385,7 @@
    "source": [
     "# This has been commented out in case you want to modify and experiment\n",
     "# with the Notebook without having to restart it.\n",
-    "# session.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "# Ejercicios\n",
-    "\n",
-    "Estas son algunas sugerencias para ejercicios que pueden ayudar a mejorar sus habilidades con TensorFlow. Es importante obtener experiencia práctica con TensorFlow para aprender a usarla correctamente.\n",
-    "\n",
-    "Es posible que desee hacer una copia de seguridad de este portátil antes de realizar cualquier cambio.\n",
-    "\n",
-    "    Cambia la tasa de aprendizaje para el optimizador.\n",
-    "    Cambie el optimizador a, por ejemplo, AdagradOptimizer o AdamOptimizer.\n",
-    "    Cambie el tamaño de lote por ej. 1 o 1000.\n",
-    "    ¿Cómo afectan estos cambios al rendimiento?\n",
-    "    ¿Crees que estos cambios tendrán el mismo efecto (si lo hay) en otros problemas de clasificación y modelos matemáticos?\n",
-    "    ¿Obtiene exactamente los mismos resultados si ejecuta el portátil varias veces sin cambiar ningún parámetro? ¿Por qué o por qué no?\n",
-    "    Cambia la función plot_example_errors () para que también imprima los logits y los valores de y_pred para los ejemplos mal clasificados.\n",
-    "    Use sparse_softmax_cross_entropy_with_logits en lugar de softmax_cross_entropy_with_logits. Esto puede requerir varios cambios en varios lugares en el código fuente. Discuta las ventajas y desventajas de usar los dos métodos.\n",
-    "    Vuelva a programar el programa usted mismo sin mirar demasiado a este código fuente.\n",
-    "    Explique a un amigo cómo funciona el programa.\n",
-    "\n",
-    "Licencia (MIT)\n",
-    "\n",
-    "Copyright (c) 2016 por Magnus Erik Hvass Pedersen\n",
-    "\n",
-    "Se concede permiso, de forma gratuita, a cualquier persona que obtenga una copia de este software y los archivos de documentación asociados (el \"Software\") para tratar el Software sin restricciones, incluidos, entre otros, los derechos de uso, copia, modificación y fusión , publicar, distribuir, sublicenciar y / o vender copias del Software, y permitir a las personas a quienes se les proporciona el Software que lo hagan, sujeto a las siguientes condiciones:\n",
-    "\n",
-    "El aviso de copyright anterior y este aviso de permiso se incluirán en todas las copias o partes sustanciales del Software.\n",
-    "\n",
-    "EL SOFTWARE SE SUMINISTRA \"TAL CUAL\", SIN GARANTÍA DE NINGÚN TIPO, EXPRESA O IMPLÍCITA, INCLUIDAS, ENTRE OTRAS, LAS GARANTÍAS DE COMERCIABILIDAD, IDONEIDAD PARA UN PROPÓSITO PARTICULAR Y NO INFRACCIÓN. EN NINGÚN CASO, LOS AUTORES O TITULARES DE DERECHOS DE AUTOR SERÁN RESPONSABLES DE CUALQUIER RECLAMACIÓN, DAÑO U OTRA RESPONSABILIDAD, YA SEA EN UNA ACCIÓN CONTRACTUAL, AGRAVIO O DE OTRO TIPO, DERIVADA DE O RELACIONADA CON EL SOFTWARE O EL USO U OTRAS NEGOCIACIONES EN EL SOFTWARE."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting data/MNIST/train-images-idx3-ubyte.gz\n",
-      "Extracting data/MNIST/train-labels-idx1-ubyte.gz\n",
-      "Extracting data/MNIST/t10k-images-idx3-ubyte.gz\n",
-      "Extracting data/MNIST/t10k-labels-idx1-ubyte.gz\n",
-      "Size of:\n",
-      "- Training-set:\t\t55000\n",
-      "- Test-set:\t\t10000\n",
-      "- Validation-set:\t5000\n",
-      "[[ 0.  0.  0.  0.  0.  0.  0.  1.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 1.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.]]\n",
-      "[7 2 1 0 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "# Load Data.....\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "data = input_data.read_data_sets(\"data/MNIST/\", one_hot=True)\n",
-    "\n",
-    "print(\"Size of:\")\n",
-    "print(\"- Training-set:\\t\\t{}\".format(len(data.train.labels)))\n",
-    "print(\"- Test-set:\\t\\t{}\".format(len(data.test.labels)))\n",
-    "print(\"- Validation-set:\\t{}\".format(len(data.validation.labels)))\n",
-    "\n",
-    "print(data.test.labels[0:5, :])\n",
-    "\n",
-    "\n",
-    "data.test.cls = np.array([label.argmax() for label in data.test.labels])\n",
-    "print (data.test.cls[0:5])"
+    " session.close()"
    ]
   }
  ],
