V tutorial, guardar y restaurar el valor de las variables del grafo

--- a/Tutorial_IV.ipynb
+++ b/Tutorial_IV.ipynb
@@ -7,8 +7,8 @@
     "## TENSOR FLOW PARA PRINCIPIANTES (IV): Uso de la API Layers\n",
     "\n",
     "\n",
-    "Como hemos visto en el tutorial anterior (ver [Tutorial III]), se discutió la importancia de usar librerías o API\n",
-    "para construir o generar la estructura de los grafos de las redes neuronales en TensorFlow, ya que estas herramientas de desarrollo facilitan la implementación y modificación del código fuente, así como la redución en el riesgo de cometer errores en los mismos. Para mostrar como iplementar estas API, en el [Tutorial III] hemos empleado la API de construcción de grafos en TensorFlow llamada PrettyTensor. Pero hay varias otras API de compilación disponibles para TensorFlow. \n",
+    "En el tutorial anterior (ver [Tutorial III]) se discutió la importancia de usar librerías o API\n",
+    "para construir o generar la estructura de los grafos de las redes neuronales en TensorFlow, dado que estas herramientas de desarrollo facilitan la implementación y modificación del código fuente, así como la redución en el riesgo de cometer errores en los mismos. Para mostrar como iplementar estas API, en el [Tutorial III] hemos empleado la API de construcción de grafos en TensorFlow llamada PrettyTensor. Pero hay varias otras API de compilación disponibles para TensorFlow. \n",
     "\n",
     "\n",
     "Este tutorial trata de como implementar otra API agregada a TensorFlow llamada \"*Layers*\" o \" *The API Layres* \" o por su nombre en Python tf.layers. Esta API generadora de grafos se instala automáticamente como parte de TensorFlow, por lo que ya no tiene que instalar un paquete de Python por separado, como se necesitaba con PrettyTensor. \n",
