Tutorial IV: Uso de la API tf.layers

--- a/Tutorial_IV.ipynb
+++ b/Tutorial_IV.ipynb
@@ -7,6 +7,10 @@
     "## TENSOR FLOW PARA PRINCIPIANTES (IV): Uso de la API Layers\n",
     "\n",
     "\n",
+    "![F1](blog/pixestein.png)\n",
+    "\n",
+    "\n",
+    "\n",
     "En el tutorial anterior (ver [Tutorial III]) se discutió la importancia de usar librerías o API\n",
     "para construir o generar la estructura de los grafos de las redes neuronales en TensorFlow, dado que estas herramientas de desarrollo facilitan la implementación y modificación del código fuente, así como la redución en el riesgo de cometer errores en los mismos. Para mostrar como iplementar estas API, en el [Tutorial III] hemos empleado la API de construcción de grafos en TensorFlow llamada PrettyTensor. Pero hay varias otras API de compilación disponibles para TensorFlow. \n",
     "\n",
