Tutorial IV: Uso de la API tf.layers

--- a/Tutorial_IV.ipynb
+++ b/Tutorial_IV.ipynb
@@ -7,7 +7,7 @@
     "## TENSOR FLOW PARA PRINCIPIANTES (IV): Uso de la API Layers\n",
     "\n",
     "\n",
-    "![F1](blog/pixestein.png)\n",
+    "![F1](imagenes/pixestein.png)\n",
     "\n",
     "\n",
     "\n",
