Tutorial III: Librería PrettyTensor

--- a/tutorial_III.ipynb
+++ b/tutorial_III.ipynb
@@ -1243,7 +1243,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1295,7 +1297,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Capa convolucional 1\n",
     "\n",
@@ -1329,7 +1334,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Capa convolucional 2\n",
     "\n",
@@ -1362,7 +1370,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Ahora para el canal 2"
    ]
